# SIH-LegalBot-Backend

./: .gitignore  pyproject.toml  requirements.txt  run.py
app/: __init__.py  models.py  views.py
static/: RTI.txt  anticipatory_bail.txt  divorce_petition.txt  family_settlement.txt  lease_agreement.txt  name_change.txt  pil.txt  property_sale.txt
