[tool.poetry]
name = "legalbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
pre-commit = "^3.4.0"
sqlalchemy = "^2.0.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
